--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <!--About me Section-->
   <div class="aboutme-container" id="about">
     <div class="flex-centered">
-      <img src="/images/laura.jpg">
+      <img src="/images/laura.JPG">
       <div class="description">
         <h3>Hi, I’m Laura!</h3>
         <p>CREATOR OF SIMPLE FOOD</p>
