--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Simple Food Design>
+  <meta property=" og:description" content="A simple and responsive fronend UI">
+  <meta property="og:image" content="https://i.ibb.co/syB2dp0/simple-food.jpg">
+  <meta property="og:url" content="http://simple-food.surge.sh">
   <link rel="stylesheet" href="styles.css">
   <!--Google font-->
   <link rel="preconnect" href="https://fonts.gstatic.com">
