--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#tips">Lifestyle</a></li>
             <li><a href="#recipes">Recipes</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#" style="color: rgb(21, 116, 211);">Landings</a></li>
+            <li><a href="http://landings.surge.sh" target="_blank" style="color: rgb(21, 116, 211);">Landings</a></li>
             <img src="/icons/menu.png" onclick="openMobileMenu()">
           </ul>
         </div>
