--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Simple Food Design>
-  <meta property=" og:description" content="A simple and responsive fronend UI">
+  <meta property="og:title" content="Simple Food Design">
+  <meta property="og:description" content="A simple and responsive fronend UI">
   <meta property="og:image" content="https://i.ibb.co/syB2dp0/simple-food.jpg">
-  <meta property="og:url" content="http://simple-food.surge.sh">
+  <meta property="og:url" content="http://simple-food3.surge.sh">
   <link rel="stylesheet" href="styles.css">
   <!--Google font-->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -31,7 +31,7 @@
             <li><a href="#tips">Lifestyle</a></li>
             <li><a href="#recipes">Recipes</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="http://landings.surge.sh" target="_blank" style="color: rgb(21, 116, 211);">Landings</a></li>
+            <li><a href="http://landings1.surge.sh" target="_blank" style="color: rgb(21, 116, 211);">Landings</a></li>
             <img src="/icons/menu.png" onclick="openMobileMenu()">
           </ul>
         </div>
@@ -46,7 +46,7 @@
     <li><a href="#tips">Lifestyle</a></li>
     <li><a href="#recipes">Recipes</a></li>
     <li><a href="#about">About</a></li>
-    <li><a href="#" style="color: rgb(21, 116, 211);">Landings</a></li>
+    <li><a href="http://landings1.surge.sh" style="color: rgb(21, 116, 211);">Landings</a></li>
     <li onclick="closeMobileMenu()"><a href="#" style="color: rgb(218, 78, 124);">Close Menu</a></li>
   </ul>
   <!---->
